--- a/WOIN/WOIN.html
+++ b/WOIN/WOIN.html
@@ -76,23 +76,23 @@
         <div class="sheet-header">Attributes</div>
         <table class="sheet-attrib">
             <tr>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_str" value="&{template:default} {{name= Strength}} {{roll= [[@{strength_1}d6]]}}">STR</button></th>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_agl" value="&{template:default} {{name= Agility}} {{roll= [[@{agility_1}d6]]}}">AGL</button></th>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_end" value="&{template:default} {{name= Endurance}} {{roll= [[@{endurance_1}d6]]}}">END</button></th>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_int" value="&{template:default} {{name= Intuition}} {{roll= [[@{intuition_1}d6]]}}">INT</button></th>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_log" value="&{template:default} {{name= Logic}} {{roll= [[@{logic_1}d6]]}}">LOG</button></th>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_wil" value="&{template:default} {{name= Willpower}} {{roll= [[@{willpower_1}d6]]}}">WIL</button></th>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_cha" value="&{template:default} {{name= Charisma}} {{roll= [[@{charisma_1}d6]]}}">CHA</button></th>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_luc" value="&{template:default} {{name= Luck}} {{roll= [[@{luck_1}d6]]}}">LUC</button></th>
-                <th><button type="roll" class="sheet-rollatrrib" name="roll_rep" value="&{template:default} {{name= Reputation}} {{roll= [[@{repuation_1}d6]]}}">REP</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_str" value="&{template:default} {{name= Strength}} {{roll= [[(@{strength_1} + ?{Modifiers (d6)|0})d6]]}}">STR</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_agl" value="&{template:default} {{name= Agility}} {{roll= [[(@{agility_1} + ?{Modifiers (d6)|0})d6]]}}">AGL</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_end" value="&{template:default} {{name= Endurance}} {{roll= [[(@{endurance_1} + ?{Modifiers (d6)|0})d6]]}}">END</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_int" value="&{template:default} {{name= Intuition}} {{roll= [[(@{intuition_1} + ?{Modifiers (d6)|0})d6]]}}">INT</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_log" value="&{template:default} {{name= Logic}} {{roll= [[(@{logic_1} + ?{Modifiers (d6)|0})d6]]}}">LOG</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_wil" value="&{template:default} {{name= Willpower}} {{roll= [[(@{willpower_1} + ?{Modifiers (d6)|0})d6]]}}">WIL</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_cha" value="&{template:default} {{name= Charisma}} {{roll= [[(@{charisma_1} + ?{Modifiers (d6)|0})d6]]}}">CHA</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_luc" value="&{template:default} {{name= Luck}} {{roll= [[(@{luck_1} + ?{Modifiers (d6)|0})d6]]}}">LUC</button></th>
+                <th><button type="roll" class="sheet-rollatrrib" name="roll_rep" value="&{template:default} {{name= Reputation}} {{roll= [[(@{repuation_1} + ?{Modifiers (d6)|0})d6]]}}">REP</button></th>
                 <th>
                     <input type="radio" class="sheet-block1 sheet-hidden" name="attr_sheet_switch7" value="0" checked/><span></span>
                     <input type="radio" class="sheet-block2 sheet-hidden" name="attr_sheet_switch7" value="1"/><span></span>
                     <div class="sheet-block1">
-                        <button type="roll" class="sheet-rollatrrib" name="roll_psi" value="&{template:default} {{name= Psionics}} {{roll= [[@{psionics_1}d6]]}}">PSI</button></th>
+                        <button type="roll" class="sheet-rollatrrib" name="roll_psi" value="&{template:default} {{name= Psionics}} {{roll= [[(@{psionics_1} + ?{Modifiers (d6)|0})d6]]}}">PSI</button></th>
                     </div>
                     <div class="sheet-block2">
-                        <button type="roll" class="sheet-rollatrrib" name="roll_psi" value="&{template:default} {{name= Magic}} {{roll= [[@{Magic_1}d6]]}}">MAG</button></th>
+                        <button type="roll" class="sheet-rollatrrib" name="roll_psi" value="&{template:default} {{name= Magic}} {{roll= [[(@{Magic_1} + ?{Modifiers (d6)|0})d6]]}}">MAG</button></th>
                     </div>
                 </th>
             </tr>
@@ -239,7 +239,7 @@
                 <fieldset class="repeating_skillsnew">
                     <table class="sheet-skill">
                         <tr>
-                            <td><button type="roll" class="sheet-rollskill" name="roll_skill" value="&{template:default} {{name= @{skill_name} }} {{attribute= @{skill_attrib}:@{skill_attrib_score} }} {{skill= @{skill_level}:@{skill_dice} }} {{Pool Limit= @{skill_max_dice}}} {{roll= [[(@{skill_rolled} + ?{Exploit mods|0})d6]]}}"></button></td>
+                            <td><button type="roll" class="sheet-rollskill" name="roll_skill" value="&{template:default} {{name= @{skill_name} }} {{attribute= @{skill_attrib}:@{skill_attrib_score} }} {{skill= @{skill_level}:@{skill_dice} }} {{Pool Limit= @{skill_max_dice}}} {{roll= [[(@{skill_rolled} + ?{Modifiers (d6)|0})d6]]}}"></button></td>
                             <td><input type="text" class="sheet-text3" name="attr_skill_name" value="" placeholder="Skill Name"/></td>
                             <td>
                                 <select class="sheet-select1" name="attr_skill_select">
@@ -282,7 +282,7 @@
                 <fieldset class="repeating_skillsold">
                     <table class="sheet-skillold">
                         <tr>
-                            <td><button type="roll" class="sheet-rollskillold" name="roll_skill" value="&{template:default} {{name= @{skill_name} }} {{attribute= @{skill_attrib}:@{skill_attrib_score} }} {{skill= @{skill_level}:@{skill_dice} }} {{Pool Limit= @{skill_max_dice}}} {{roll= [[(@{skill_rolled} + ?{Exploit mods|0})d6]]}}"></button></td>
+                            <td><button type="roll" class="sheet-rollskillold" name="roll_skill" value="&{template:default} {{name= @{skill_name} }} {{attribute= @{skill_attrib}:@{skill_attrib_score} }} {{skill= @{skill_level}:@{skill_dice} }} {{Pool Limit= @{skill_max_dice}}} {{roll= [[(@{skill_rolled} + ?{Modifiers (d6)|0})d6]]}}"></button></td>
                             <td><input type="text" class="sheet-text3" name="attr_skill_name" value="" placeholder="Skill Name"/></td>
                             <td>
                                 <select class="sheet-select1" name="attr_skill_select">
@@ -1473,11 +1473,11 @@
                     </div>
                 </div>
             </div>    </div>
-    <!-- Experince -->
+    <!-- Experience -->
     <div class="sheet-tab-content sheet-tab5">
             <input type="radio" class="sheet-new sheet-hidden" name="attr_sheet_type10" value="0" checked/>
             <input type="radio" class="sheet-old sheet-hidden" name="attr_sheet_type10"  value="1" />
-        <div class="sheet-header">Experince</div>
+        <div class="sheet-header">Experience</div>
         <table class="sheet-skill" style="width:800px;">
             <tr>
                 <th>Total Earned</th>
