--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -23,7 +23,8 @@
 			<div class="content">
 				<h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 				<ul>
-				    <li>Skills Tab. New Revised Technique Table. Options to show/hide old technigue or new technique tables. If old technique table has no rows, then hide old table, show new table.</li>
+					<li>Skills Tab. New Revised Technique Table. Options to show/hide old technigue or new technique tables. If old technique table has no rows, then hide old table, show new table.</li>
+					<li>Quirks and Perks tables. Set default point value of Quirks to -1 and Perks to 1, suggested by Kevin A (ID: 688156).</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 				<button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -2384,7 +2385,7 @@
 							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Frequency of Appearance Check}} {{activeDefense=[[0]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{foa} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsAFOA" />
 						</div>
 						<div class="sheet-cell sheet-col3">
-							<input type="number" name="attr_points" title="Macro table name: repeating_perks. Field name: points" />
+							<input type="number" name="attr_points" value="1" title="Macro table name: repeating_perks. Field name: points" />
 						</div>
 						<div class="sheet-cell sheet-col4">
 							<input type="text" name="attr_ref" title="Macro table name: repeating_perks. Field name: ref" />
@@ -2505,7 +2506,7 @@
 							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Self-control Check}} {{activeDefense=[[0]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{control_rating} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsDSCR" />
 						</div>
 						<div class="sheet-cell sheet-col3">
-							<input type="number" name="attr_points" title="Macro table name: repeating_quirks. Field name: points" />
+							<input type="number" name="attr_points" value="-1" title="Macro table name: repeating_quirks. Field name: points" />
 						</div>
 						<div class="sheet-cell sheet-col4">
 							<input type="text" name="attr_ref" title="Macro table name: repeating_quirks. Field name: ref" />
@@ -5318,6 +5319,7 @@
 		<li>Fix a spelling error.</li>
 		<li>Fix display bug with Add to Tracker Roll Template.</li>
 		<li>Grimoire tab. Spells Table. Reduce the size of the Reason for MOD input line to try to prevent wrapping to next line.</li>
+		<li>Quirks and Perks tables. Set default point value of Quirks to -1 and Perks to 1, suggested by Kevin A (ID: 688156).</li>
 	</ul>
 	
 	<h4>Version 2.1.1</h4>
@@ -5737,18 +5739,10 @@ For each hit, roll hit location randomly. If that location is behind cover, the 
 		            <table>
     			        <tr>
     			            <td>
-    			                Fragmentation Recoil</b>      
+    			                <b>Fragmentation Recoil: </b>      
     			            </td>
     			            <td>
     			                <input type="number" step="1" value="3" name="attr_fragmentation_recoil"></input>
-    			            </td>
-    			        </tr>
-    			        <tr>
-    			            <td>
-    			                Penalty for each spell <b>Maintained:</b>             
-    			            </td>
-    			            <td>
-    			                <input type="number" step="1" value="-3" name="attr_penalty_per_spell_maintained"></input>
     			            </td>
     			        </tr>
     			    </table>
