--- a/Connected_stories/Connected_stories.html
+++ b/Connected_stories/Connected_stories.html
@@ -155,118 +155,82 @@
 		<div class="sheet-wepon">
 			<p>무기</p>
 			<div class="sheet-list">
-				<table>
-					<thead>
-						<tr>
-							<th style="width:112px;">무기명</th>
-							<th>다이스</th>
-							<th style="width:25px;"></th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>
-								<input type="text" name="attr_W1_name" id="attr_W1_name" class="sheet-input"/>
-							</td>
-							<td><input type="text" name="attr_W1" id="attr_W1" value="" class="sheet-input"/></td>
-							<td>
-								<button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W1_name}}}{{roll=[[@{W1}]]}}" class="old-roll"></button>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<input type="text" name="attr_W2_name" id="attr_W2_name" class="sheet-input"/>
-							</td>
-							<td><input type="text" name="attr_W2" id="attr_W2" value="" class="sheet-input"/></td>
-							<td>
-								<button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W2_name}}}{{roll=[[@{W2}]]}}" class="old-roll"></button>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<input type="text" name="attr_W3_name" id="attr_W3_name" class="sheet-input"/>
-							</td>
-							<td><input type="text" name="attr_W3" id="attr_W3" value="" class="sheet-input"/></td>
-							<td>
-								<button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W3_name}}}{{roll=[[@{W3}]]}}" class="old-roll"></button>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<input type="text" name="attr_W4_name" id="attr_W4_name" class="sheet-input"/>
-							</td>
-							<td><input type="text" name="attr_W4" id="attr_W4" value="" class="sheet-input"/></td>
-							<td>
-								<button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W4_name}}}{{roll=[[@{W4}]]}}" class="old-roll"></button>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<input type="text" name="attr_W5_name" id="attr_W5_name" class="sheet-input"/>
-							</td>
-							<td><input type="text" name="attr_W5" id="attr_W5" value="" class="sheet-input"/></td>
-							<td>
-								<button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W5_name}}}{{roll=[[@{W5}]]}}" class="old-roll"></button>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<input type="text" name="attr_W6_name" id="attr_W6_name" class="sheet-input"/>
-							</td>
-							<td><input type="text" name="attr_W6" id="attr_W6" value="" class="sheet-input"/></td>
-							<td>
-								<button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W6_name}}}{{roll=[[@{W6}]]}}" class="old-roll"></button>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<dl class="sheet-head">
+					<dt>무기명</dt>
+					<dd>다이스</dd>
+				</dl>
+				<dl>
+					<dt><input type="text" name="attr_W1_name" id="attr_W1_name" class="sheet-input"/></dt>
+					<dd><input type="text" name="attr_W1" id="attr_W1" value="" class="sheet-input"/></dd>
+					<dd><button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W1_name}}}{{roll=[[@{W1}]]}}" class="old-roll"></button></dd>
+				</dl>
+
+				<dl>
+					<dt><input type="text" name="attr_W2_name" id="attr_W2_name" class="sheet-input"/></dt>
+					<dd><input type="text" name="attr_W2" id="attr_W2" value="" class="sheet-input"/></dd>
+					<dd><button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W2_name}}}{{roll=[[@{W2}]]}}" class="old-roll"></button></dd>
+				</dl>
+				<dl>
+					<dt><input type="text" name="attr_W3_name" id="attr_W3_name" class="sheet-input"/></dt>
+					<dd><input type="text" name="attr_W3" id="attr_W3" value="" class="sheet-input"/></dd>
+					<dd><button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W3_name}}}{{roll=[[@{W3}]]}}" class="old-roll"></button></dd>
+				</dl>
+				<dl>
+					<dt><input type="text" name="attr_W4_name" id="attr_W4_name" class="sheet-input"/></dt>
+					<dd><input type="text" name="attr_W4" id="attr_W4" value="" class="sheet-input"/></dd>
+					<dd><button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W4_name}}}{{roll=[[@{W4}]]}}" class="old-roll"></button></dd>
+				</dl>
+				<dl>
+					<dt><input type="text" name="attr_W5_name" id="attr_W5_name" class="sheet-input"/></dt>
+					<dd><input type="text" name="attr_W5" id="attr_W5" value="" class="sheet-input"/></dd>
+					<dd><button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W5_name}}}{{roll=[[@{W5}]]}}" class="old-roll"></button></dd>
+				</dl>
+				<dl>
+					<dt><input type="text" name="attr_W6_name" id="attr_W6_name" class="sheet-input"/></dt>
+					<dd><input type="text" name="attr_W6" id="attr_W6" value="" class="sheet-input"/></dd>
+					<dd><button type='roll' value="&{template:StoryDamage} {{name=@{character_name}}}{{statname=@{W6_name}}}{{roll=[[@{W6}]]}}" class="old-roll"></button></dd>
+				</dl>
 			</div>
 		</div>
 	</div>
 
 	<div class="sheet-relationbox">
 		<p>관계 및 호감도</p>
-		<table>
-			<thead>
-				<tr>
-					<th style="width:95px;">이름</th>
-					<th>관계</th>
-					<th style="width:40px;">호감도</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><input type="text" name="attr_R1_name" id="attr_W1_name" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R1_txt" id="attr_R1_txt" value="" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R1_val" id="attr_R1_val" value="0" class="sheet-input"/></td>
-				</tr>
-				<tr>
-					<td><input type="text" name="attr_R2_name" id="attr_W1_name" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R2_txt" id="attr_R2_txt" value="" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R2_val" id="attr_R2_val" value="0" class="sheet-input"/></td>
-				</tr>
-				<tr>
-					<td><input type="text" name="attr_R3_name" id="attr_W1_name" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R3_txt" id="attr_R3_txt" value="" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R3_val" id="attr_R3_val" value="0" class="sheet-input"/></td>
-				</tr>
-				<tr>
-					<td><input type="text" name="attr_R4_name" id="attr_W1_name" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R4_txt" id="attr_R4_txt" value="" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R4_val" id="attr_R4_val" value="0" class="sheet-input"/></td>
-				</tr>
-				<tr>
-					<td><input type="text" name="attr_R5_name" id="attr_W1_name" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R5_txt" id="attr_R5_txt" value="" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R5_val" id="attr_R5_val" value="0" class="sheet-input"/></td>
-				</tr>
-				<tr>
-					<td><input type="text" name="attr_R6_name" id="attr_W1_name" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R6_txt" id="attr_R6_txt" value="" class="sheet-input"/></td>
-					<td><input type="text" name="attr_R6_val" id="attr_R6_val" value="0" class="sheet-input"/></td>
-				</tr>
-			</tbody>
-		</table>
+		<dl class="sheet-head">
+			<dt>이름</dt>
+			<dd>관계</dd>
+			<dd>호감도</dd>
+		</dl>
+		<dl>
+			<dt><input type="text" name="attr_R1_name" id="attr_W1_name" class="sheet-input"/></dt>
+			<dd><input type="text" name="attr_R1_txt" id="attr_R1_txt" value="" class="sheet-input"/></dd>
+			<dd><input type="text" name="attr_R1_val" id="attr_R1_val" value="0" class="sheet-input"/></dd>
+		</dl>
+		<dl>
+			<dt><input type="text" name="attr_R2_name" id="attr_W1_name" class="sheet-input"/></dt>
+			<dd><input type="text" name="attr_R2_txt" id="attr_R2_txt" value="" class="sheet-input"/></dd>
+			<dd><input type="text" name="attr_R2_val" id="attr_R2_val" value="0" class="sheet-input"/></dd>
+		</dl>
+		<dl>
+			<dt><input type="text" name="attr_R3_name" id="attr_W1_name" class="sheet-input"/></dt>
+			<dd><input type="text" name="attr_R3_txt" id="attr_R3_txt" value="" class="sheet-input"/></dd>
+			<dd><input type="text" name="attr_R3_val" id="attr_R3_val" value="0" class="sheet-input"/></dd>
+		</dl>
+		<dl>
+			<dt><input type="text" name="attr_R4_name" id="attr_W1_name" class="sheet-input"/></dt>
+			<dd><input type="text" name="attr_R4_txt" id="attr_R4_txt" value="" class="sheet-input"/></dd>
+			<dd><input type="text" name="attr_R4_val" id="attr_R4_val" value="0" class="sheet-input"/></dd>
+		</dl>
+		<dl>
+			<dt><input type="text" name="attr_R5_name" id="attr_W1_name" class="sheet-input"/></dt>
+			<dd><input type="text" name="attr_R5_txt" id="attr_R5_txt" value="" class="sheet-input"/></dd>
+			<dd><input type="text" name="attr_R5_val" id="attr_R5_val" value="0" class="sheet-input"/></dd>
+		</dl>
+		<dl>
+			<dt><input type="text" name="attr_R6_name" id="attr_W1_name" class="sheet-input"/></dt>
+			<dd><input type="text" name="attr_R6_txt" id="attr_R6_txt" value="" class="sheet-input"/></dd>
+			<dd><input type="text" name="attr_R6_val" id="attr_R6_val" value="0" class="sheet-input"/></dd>
+		</dl>
 	</div>
 
 	<div class="sheet-inventory">
