added page numbers for ironsworn base moves

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -7503,6 +7503,7 @@
                     <p>On a <strong>miss,</strong> you fail, or your progress is undermined by a dramatic and costly
                         turn of events. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 60</div>
             </div>
 
             <input type="radio" class="sheet-secure-advantage sheet-hidden" id="secureAdvantageMove"
@@ -7527,6 +7528,7 @@
                     <p>On a <strong>weak hit,</strong> your advantage is short-lived. Take +1 momentum.</p>
                     <p>On a <strong>miss,</strong> you fail or your assumptions betray you. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 61</div>
             </div>
 
             <input type="radio" class="sheet-gather-information sheet-hidden" id="gatherInformationMove"
@@ -7546,6 +7548,7 @@
                     <p>On a <strong>miss,</strong> your investigation unearths a dire threat or reveals an unwelcome
                         truth that undermines your quest. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 62</div>
             </div>
 
             <input type="radio" class="sheet-heal sheet-hidden" id="healMove" name="attr_movepreview" value="4" />
@@ -7560,6 +7563,7 @@
                         choice).</p>
                     <p>On a <strong>miss,</strong> your aid is ineffective. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 62</div>
             </div>
 
             <input type="radio" class="sheet-resupply sheet-hidden" id="resupplyMove" name="attr_movepreview"
@@ -7572,6 +7576,7 @@
                     <p>On a <strong>weak hit,</strong> take up to +2 supply, but suffer -1 momentum for each.</p>
                     <p>On a <strong>miss,</strong> you find nothing helpful. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 63</div>
             </div>
 
             <input type="radio" class="sheet-make-camp sheet-hidden" id="makeCampMove" name="attr_movepreview"
@@ -7593,6 +7598,7 @@
                     </ul>
                     <p>On a <strong>miss,</strong> you take no comfort. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 64</div>
             </div>
 
             <input type="radio" class="sheet-undertake-journey sheet-hidden" id="undertakeJourneyMove"
@@ -7623,6 +7629,7 @@
 
                     <p>On a <strong>miss,</strong> you are waylaid by a perilous event. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 65</div>
             </div>
 
             <input type="radio" class="sheet-reach-destination sheet-hidden" id="reachDestinationMove"
@@ -7644,6 +7651,7 @@
                         you were misled about your destination. If your journey continues, clear all but one filled
                         progress, and raise the journey’s rank by one (if not already epic).</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 68</div>
             </div>
 
             <input type="radio" class="sheet-compel sheet-hidden" id="compelMove" name="attr_movepreview" value="9" />
@@ -7665,6 +7673,7 @@
                     <p>On a <strong>miss,</strong> they refuse or make a demand which costs you greatly. <em>Pay the
                             Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 69</div>
             </div>
 
             <input type="radio" class="sheet-sojourn sheet-hidden" id="sojournMove" name="attr_movepreview"
@@ -7708,6 +7717,7 @@
                     </ul>
                     <p>On a <strong>miss,</strong> you find no help here. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 71</div>
             </div>
 
             <input type="radio" class="sheet-draw-the-circle sheet-hidden" id="drawTheCircleMove"
@@ -7741,6 +7751,7 @@
                         surrender, or
                         are defeated, they make a demand of you.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 73</div>
             </div>
 
             <input type="radio" class="sheet-forge-bond sheet-hidden" id="forgeBondMove" name="attr_movepreview"
@@ -7766,6 +7777,7 @@
 
                     <p>On a <strong>miss,</strong> they reject you. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 74</div>
             </div>
 
             <input type="radio" class="sheet-test-bond sheet-hidden" id="testBondMove" name="attr_movepreview"
@@ -7789,6 +7801,7 @@
                         the
                         bond and <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 75</div>
             </div>
 
             <input type="radio" class="sheet-aid-ally sheet-hidden" id="aidAllyMove" name="attr_movepreview"
@@ -7800,6 +7813,7 @@
                         hit, they (instead of you) can take the benefits of the move. If you are in combat and score a
                         <strong>strong hit,</strong> you and your ally have initiative.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 76</div>
             </div>
 
             <input type="radio" class="sheet-write-epilogue sheet-hidden" id="writeEpilogueMove" name="attr_movepreview"
@@ -7819,6 +7833,7 @@
                         it (<em>Ask the Oracle</em> if unsure).</p>
                     <p>On a <strong>miss,</strong> your fears are realized.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 77</div>
             </div>
 
             <input type="radio" class="sheet-enter-the-fray sheet-hidden" id="enterTheFrayMove" name="attr_movepreview"
@@ -7849,6 +7864,7 @@
                     <p>On a <strong>miss,</strong> combat begins with you at a disadvantage. <em>Pay the Price.</em>
                         Your foe has initiative.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 78</div>
             </div>
 
             <input type="radio" class="sheet-strike sheet-hidden" id="strikeMove" name="attr_movepreview" value="17" />
@@ -7862,6 +7878,7 @@
                     <p>On a <strong>miss,</strong> your attack fails and you must <em>Pay the Price.</em> Your foe has
                         initiative.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 79</div>
             </div>
 
             <input type="radio" class="sheet-clash sheet-hidden" id="clashMove" name="attr_movepreview" value="18" />
@@ -7880,6 +7897,7 @@
                     <p>On a <strong>miss,</strong> you are outmatched and must <em>Pay the Price.</em> Your foe has
                         initiative.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 80</div>
             </div>
 
             <input type="radio" class="sheet-turn-the-tide sheet-hidden" id="turnTheTideMove" name="attr_movepreview"
@@ -7892,6 +7910,7 @@
                     <p>If you fail to score a hit on that move, you must suffer a dire outcome. <em>Pay the Price.</em>
                     </p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 81</div>
             </div>
 
             <input type="radio" class="sheet-end-the-fight sheet-hidden" id="endTheFightMove" name="attr_movepreview"
@@ -7920,6 +7939,7 @@
                     </ul>
                     <p>On a <strong>miss,</strong> you have lost this fight. <em>Pay the Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 82</div>
             </div>
 
             <input type="radio" class="sheet-battle sheet-hidden" id="battleMove" name="attr_movepreview" value="21" />
@@ -7942,6 +7962,7 @@
                     <p>On a <strong>miss,</strong> you are defeated and the objective is lost to you. <em>Pay the
                             Price.</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 84</div>
             </div>
 
             <input type="radio" class="sheet-endure-harm sheet-hidden" id="endureHarmMove" name="attr_movepreview"
@@ -7963,6 +7984,7 @@
                         wounded
                         or maimed (if currently unmarked) or roll on the oracle.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 91</div>
             </div>
 
             <input type="radio" class="sheet-face-death sheet-hidden" id="faceDeathMove" name="attr_movepreview"
@@ -7984,6 +8006,7 @@
                     </ul>
                     <p>On a <strong>miss,</strong> you are dead.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 93</div>
             </div>
 
             <input type="radio" class="sheet-companion-endure-harm sheet-hidden" id="companionEndureHarmMove"
@@ -8006,6 +8029,7 @@
                         dead.
                         Take 1 experience for each marked ability on your companion asset, and remove it.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 94</div>
             </div>
 
             <input type="radio" class="sheet-endure-stress sheet-hidden" id="endureStressMove" name="attr_movepreview"
@@ -8029,6 +8053,7 @@
                         or
                         corrupted (if currently unmarked) or roll on the following table.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 95</div>
             </div>
 
             <input type="radio" class="sheet-face-desolation sheet-hidden" id="faceDesolationMove"
@@ -8050,6 +8075,7 @@
                     </ul>
                     <p>On a <strong>miss,</strong> you succumb to despair or horror and are lost.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 96</div>
             </div>
 
             <input type="radio" class="sheet-out-of-supply sheet-hidden" id="outOfSupplyMove" name="attr_movepreview"
@@ -8063,6 +8089,7 @@
                         -spirit
                         or -momentum as appropriate to the circumstances.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 97</div>
             </div>
 
             <input type="radio" class="sheet-face-setback sheet-hidden" id="faceSetbackMove" name="attr_movepreview"
@@ -8081,6 +8108,7 @@
                             progress; formidable=clear 1 progress; extreme=clear 2 ticks; epic=clear 1 tick).</li>
                     </ul>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 97</div>
             </div>
 
             <input type="radio" class="sheet-swear-vow sheet-hidden" id="swearVowMove" name="attr_movepreview"
@@ -8102,6 +8130,7 @@
                         <li>You give up: Forsake Your Vow.</li>
                     </ul>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 98</div>
             </div>
 
             <input type="radio" class="sheet-reach-milestone sheet-hidden" id="reachMilestoneMove"
@@ -8120,6 +8149,7 @@
                         <li>Epic quest: Mark 1 tick.</li>
                     </ul>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 100</div>
             </div>
 
             <input type="radio" class="sheet-fulfill-vow sheet-hidden" id="fulfillVowMove" name="attr_movepreview"
@@ -8144,6 +8174,7 @@
                         <li>You give up: Forsake Your Vow.</li>
                     </ul>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 101</div>
             </div>
 
             <input type="radio" class="sheet-forsake-vow sheet-hidden" id="forsakeVowMove" name="attr_movepreview"
@@ -8156,6 +8187,7 @@
                         (troublesome=1; dangerous=2; formidable=3; extreme=4; epic=5). If the vow was made to a person
                         or community with whom you share a bond, <em>Test Your Bond</em> when you next meet.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 102</div>
             </div>
 
             <input type="radio" class="sheet-advance sheet-hidden" id="advanceMove" name="attr_movepreview"
@@ -8167,6 +8199,7 @@
                             a companion,</strong> you may spend 3 experience to add a new asset, or 2 experience to
                         upgrade an asset.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 103</div>
             </div>
 
             <input type="radio" class="sheet-pay-the-price sheet-hidden" id="payThePriceMove" name="attr_movepreview"
@@ -8233,6 +8266,7 @@
                             twice more on this table. Both results occur. If they are the same result, make it
                             worse.</span></div>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 105</div>
             </div>
 
             <input type="radio" class="sheet-ask-the-oracle sheet-hidden" id="askTheOracleMove" name="attr_movepreview"
@@ -8291,6 +8325,7 @@
                     </div>
                 </div>
                 <div class="sheet-oracle-footer">On a match, an extreme result or twist has occurred.</div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 107</div>
             </div>
 
             <input type="radio" class="sheet-discover-site sheet-hidden" id="discoverSiteMove" name="attr_movepreview"
