--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -738,26 +738,25 @@
 				function translateAttScore (attscore) {
 					switch (attscore) {
 						case '(AGL)':
-							return 'agl-u'
+							return 'agl-u';
 						case '(SMA)':
-							return 'sma-u'
+							return 'sma-u';
 						case '(SPI)':
-							return 'spi-u'
+							return 'spi-u';
 						case '(STR)':
-							return 'str-u'
+							return 'str-u';
 						case '(VIG)':
-							return 'vig-u'
+							return 'vig-u';
 						default:
-							return 'error'
+							return 'error';
 					}
 				};
-				
-				acStatMod = v.academicsmod;
-				acSkillMod = v.academicsskillmod;
-				acStat = v.academics;
-				acSkill = v.academicsskill
+				console.log("Common-knowledge name: " + v['common-knowledgename']);
+				// acStatMod = v.academicsmod;
+				// acSkillMod = v.academicsskillmod;
+				// acStat = v.academics;
+				// acSkill = v.academicsskill;
 				setattrs({
-					character_sheet: concat(sheetVersionPrefix, sheetVersion),
 					commonknowledgename: v['common-knowledgename'],
 					linkedathleticsatt: translateAttScore(v.linkedathleticsatt),
 					linkedpsionicsatt: translateAttScore(v.linkedpsionicsatt),
@@ -770,13 +769,13 @@
 					linkedweirdscienceatt: translateAttScore(v.linkedweirdscienceattscore),
 					linkedweirdscienceattbutton: v.linkedweirdscienceattscorebutton,
 					linkedweirdscienceattformula: v.linkedweirdscienceattscoreformula,
-					scholarship: acStat,                // handled above to avoid asynch issues
+					scholarship: v.academics,                // handled above to avoid asynch issues
 					usescholarship: v.useacademics,
-					scholarshipmod: acStatMod,          // handled above to avoid asynch issues
+					scholarshipmod: v.academicsmod,          // handled above to avoid asynch issues
 					scholarshipCur: v.academicsCur,
-					academics: acSkill,
+					academics: v.academicsskill,
 					academics_delta: v.academicsskill_delta,
-					academicsmod: acSkillMod,           // handled above to avoid asynch issues
+					academicsmod: v.academicsskillmod,           // handled above to avoid asynch issues
 					academics_rank: v.academicsskill_rank,
 					academics_display: v.academicsskill_display,
 					academicsmod_base: v.academicsskillmod_base,
@@ -786,6 +785,12 @@
 					fightingwilddieinfo: v.fiwilddieinfo,
 					fightingModType: v.fiModType
 				});
+				console.log("4.0.1 Attrs set")
+				// getSectionIDs("skills", function(idarray) {
+				//     for(var i=0; i < idarray.length; i++) {
+				//        getAttrs([`repeating_skills_$(idarray[i])_linkedotherattrscore`], function(v))
+				//     }
+				//  });
 			});
 		}
 		else {
@@ -803,13 +808,13 @@
 		console.log("<===== Begin Sheet Upgrade Conversion Process =====>");
 		console.log("Sheet Version: " + v.character_sheet.slice(22));
 		const version = parseFloat(v.character_sheet.slice(22)) || 0;
-		console.log(version);
+		console.log("Version: " + version);
 		const versionone = parseInt(v.character_sheet.slice(22)) || 0;
-		console.log(versionone);
+		console.log("Versionone: " + versionone);
 		const versiontwo = parseInt(v.character_sheet.slice(24)) || 0;
-		console.log(versiontwo);
+		console.log("Versiontwo: " + versiontwo);
 		const versionthree = parseInt(v.character_sheet.slice(27)) || 0;
-		console.log(versionthree);
+		console.log("Versionthree: " + versionthree);
 		upgradeSheet(version, versionone, versiontwo, versionthree);
 		});
 	});
@@ -3527,7 +3532,7 @@
 	});
 	
 	//End Statblock stuff
-	</script>
+	/script>
 <input type='hidden' name='attr_dopay' value="init" />
 <input type='text' style='display: none;' name='attr_wdNum' value='1' />
 <!-- Stat Block Fields -->
